working query params

--- a/checkbook-checkout/package.json
+++ b/checkbook-checkout/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-query-params": "^1.0.9",
     "react-router-dom": "latest",
     "react-scripts": "2.0.0"
   },
