added progress bars and paper object

--- a/checkbook-checkout/package.json
+++ b/checkbook-checkout/package.json
@@ -4,7 +4,10 @@
   "description": "A simple example deployed using react-codesandboxer",
   "main": "index.js",
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "material-ui": "^0.20.2",
     "react": "latest",
     "react-dom": "latest",
     "react-query-params": "^1.0.9",
