--- a/checkbook-checkout/package.json
+++ b/checkbook-checkout/package.json
@@ -7,9 +7,14 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "material-ui": "^0.20.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-fade-in": "^0.1.8",
+    "react-inlinesvg": "^1.2.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-query-params": "^1.0.9",
     "react-router-dom": "latest",
     "react-scripts": "2.0.0"
